--- a/style.css
+++ b/style.css
@@ -120,20 +120,22 @@ display: flex;
 margin-left: 150px;
 margin-right: 150px;
 
+
 }
 .do1{
     padding: 20px;
     margin: 10px;
     margin-top: 20px;
     border-radius: 10px;
-    box-shadow: 4px 4px 10px 4px  rgb(233, 233, 233);
+    box-shadow: 4px 4px 10px 4px  rgb(231, 220, 220);
+    background-color: rgb(248, 229, 236);
 }
 .do1 img{    
 width: 28px;
 }
 .do1 p{  
     font-size: 10px; 
-    color:#757575;
+    color:#9f8d8d;
     line-height: 16px;
     }
 
